@@ -46,7 +46,7 @@ public class AnswerController {
 
         Answer answer = answerService.create(q, answerForm.getContent(), siteUser);
 
-        return "redirect:/question/detail/%d".formatted(id);
+        return "redirect:/question/detail/%d#answer_%d".formatted(id, answer.getId());
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -74,7 +74,8 @@ public class AnswerController {
         }
 
         answerService.modify(answer, answerForm.getContent());
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+
+        return String.format("redirect:/question/detail/%s#answer_%d".formatted( answer.getQuestion().getId()),id);
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -88,7 +89,7 @@ public class AnswerController {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "삭제권한이 없습니다.");
         }
         answerService.delete(answer);
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+        return String.format("redirect:/question/detail/%s".formatted( answer.getQuestion().getId()));
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -97,7 +98,7 @@ public class AnswerController {
         Answer answer = this.answerService.getAnswer(id);
         SiteUser siteUser = this.userService.getUser(principal.getName());
         this.answerService.vote(answer, siteUser);
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
+        return String.format("redirect:/question/detail/%s".formatted( answer.getQuestion().getId()));
     }
 
 
